--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </section>
 
 <footer>
-    © 2026 Maks Krawczyk | Strona zrobiona w HTML & CSS
+    © 2026 ManKrawiec | Strona zrobiona w HTML & CSS
 </footer>
 
 </body>
