--- a/index.html
+++ b/index.html
@@ -1,112 +1,137 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maks Site</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ManKrawiec | Portfolio</title>
 
-        body {
-            background: linear-gradient(135deg, #0f0f0f, #1e1e2f);
-            color: white;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
+<style>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', sans-serif;
+}
 
-        header {
-            padding: 20px;
-            text-align: center;
-            background: rgba(0,0,0,0.6);
-            backdrop-filter: blur(10px);
-        }
+body {
+    background: #0a0a0f;
+    color: #e5e5e5;
+    line-height: 1.6;
+}
 
-        header h1 {
-            font-size: 2.5rem;
-            color: #00ffcc;
-        }
+header {
+    padding: 20px 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #111;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
 
-        nav {
-            margin-top: 10px;
-        }
+.logo {
+    font-size: 1.6rem;
+    font-weight: bold;
+    color: #4fd1c5;
+}
 
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-            transition: 0.3s;
-        }
+nav a {
+    color: white;
+    text-decoration: none;
+    margin-left: 18px;
+    font-size: 1rem;
+    transition: 0.3s;
+}
 
-        nav a:hover {
-            color: #00ffcc;
-        }
+nav a:hover {
+    color: #4fd1c5;
+}
 
-        .hero {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            padding: 40px;
-        }
+.hero {
+    padding: 100px 10%;
+    text-align: center;
+}
 
-        .hero h2 {
-            font-size: 2rem;
-            margin-bottom: 20px;
-        }
+.hero h1 {
+    font-size: 3rem;
+    margin-bottom: 15px;
+}
 
-        .hero button {
-            padding: 12px 25px;
-            font-size: 1rem;
-            border: none;
-            border-radius: 8px;
-            background: #00ffcc;
-            cursor: pointer;
-            transition: 0.3s;
-        }
+.hero p {
+    max-width: 600px;
+    margin: auto;
+    opacity: 0.85;
+}
 
-        .hero button:hover {
-            background: #00bfa6;
-            transform: scale(1.05);
-        }
+.section {
+    padding: 70px 10%;
+    text-align: center;
+}
 
-        footer {
-            text-align: center;
-            padding: 15px;
-            background: rgba(0,0,0,0.6);
-            font-size: 0.9rem;
-        }
-    </style>
+.social-links a {
+    display: inline-block;
+    margin: 12px;
+    color: #4fd1c5;
+    text-decoration: none;
+    font-size: 1.3rem;
+    transition: 0.2s;
+}
+
+.social-links a:hover {
+    transform: scale(1.1);
+    color: #76f1d8;
+}
+
+footer {
+    text-align: center;
+    padding: 18px;
+    background: #111;
+    margin-top: 40px;
+    font-size: 0.9rem;
+    opacity: 0.8;
+}
+</style>
+
 </head>
 <body>
 
 <header>
-    <h1>Maks Dev</h1>
+    <div class="logo">ManKrawiec</div>
     <nav>
-        <a href="#">Strona główna</a>
-        <a href="#">O mnie</a>
-        <a href="#">Projekty</a>
-        <a href="#">Kontakt</a>
+        <a href="#about">About</a>
+        <a href="#links">Links</a>
+        <a href="#contact">Contact</a>
     </nav>
 </header>
 
 <section class="hero">
-    <div>
-        <h2>Witam na mojej stronie 🚀</h2>
-        <p>Tworzę projekty, eksperymentuję z Linuxem i programuję.</p>
-        <br>
-        <button onclick="alert('Dzięki za kliknięcie 😎')">Kliknij mnie</button>
+    <h1>Hey — I'm <span style="color:#4fd1c5;">ManKrawiec</span></h1>
+    <p>Welcome to my portfolio! I’m a creator, coder, and online streamer — this is where you can follow what I do across the web.</p>
+</section>
+
+<section id="about" class="section">
+    <h2>About Me</h2>
+    <p>I love building projects, streaming, and sharing what I do online. I’m always experimenting and learning new skills.</p>
+</section>
+
+<section id="links" class="section">
+    <h2>My Socials & Profiles</h2>
+    <div class="social-links">
+        <a href="https://github.com/ManKrawiec" target="_blank">GitHub</a>
+        <a href="https://www.twitch.tv/mankrawiec" target="_blank">Twitch</a>
+        <a href="https://www.tiktok.com/@pankrawiec11" target="_blank">TikTok</a>
+        <a href="https://discord.gg/8MzyPqCg6n" target="_blank">Discord</a>
     </div>
 </section>
 
+<section id="contact" class="section">
+    <h2>Contact</h2>
+    <p>Feel free to reach out through any of the links above — I respond to messages, collabs & ideas!</p>
+</section>
+
 <footer>
-    © 2026 ManKrawiec | Strona zrobiona w HTML & CSS
+    © 2026 ManKrawiec. All rights reserved.
 </footer>
 
 </body>
