--- a/index.html
+++ b/index.html
@@ -3,136 +3,30 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ManKrawiec | Portfolio</title>
-
-<style>
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Segoe UI', sans-serif;
-}
-
-body {
-    background: #0a0a0f;
-    color: #e5e5e5;
-    line-height: 1.6;
-}
-
-header {
-    padding: 20px 10%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #111;
-    position: sticky;
-    top: 0;
-    z-index: 10;
-}
-
-.logo {
-    font-size: 1.6rem;
-    font-weight: bold;
-    color: #4fd1c5;
-}
-
-nav a {
-    color: white;
-    text-decoration: none;
-    margin-left: 18px;
-    font-size: 1rem;
-    transition: 0.3s;
-}
-
-nav a:hover {
-    color: #4fd1c5;
-}
-
-.hero {
-    padding: 100px 10%;
-    text-align: center;
-}
-
-.hero h1 {
-    font-size: 3rem;
-    margin-bottom: 15px;
-}
-
-.hero p {
-    max-width: 600px;
-    margin: auto;
-    opacity: 0.85;
-}
-
-.section {
-    padding: 70px 10%;
-    text-align: center;
-}
-
-.social-links a {
-    display: inline-block;
-    margin: 12px;
-    color: #4fd1c5;
-    text-decoration: none;
-    font-size: 1.3rem;
-    transition: 0.2s;
-}
-
-.social-links a:hover {
-    transform: scale(1.1);
-    color: #76f1d8;
-}
-
-footer {
-    text-align: center;
-    padding: 18px;
-    background: #111;
-    margin-top: 40px;
-    font-size: 0.9rem;
-    opacity: 0.8;
-}
-</style>
-
+<title>ManKrawiec</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-    <div class="logo">ManKrawiec</div>
-    <nav>
-        <a href="#about">About</a>
-        <a href="#links">Links</a>
-        <a href="#contact">Contact</a>
-    </nav>
+  <div class="logo">ManKrawiec</div>
+  <nav>
+    <a href="about.html">About</a>
+    <a href="content.html">Content</a>
+    <a href="contact.html">Community</a>
+  </nav>
 </header>
 
 <section class="hero">
-    <h1>Hey — I'm <span style="color:#4fd1c5;">ManKrawiec</span></h1>
-    <p>Welcome to my portfolio! I’m a creator, coder, and online streamer — this is where you can follow what I do across the web.</p>
+  <h1>Streaming. Coding. Creating.</h1>
+  <p>Welcome to my official website.</p>
+
+  <div class="buttons">
+    <a href="https://www.twitch.tv/mankrawiec" target="_blank" class="primary">Watch on Twitch</a>
+    <a href="https://discord.gg/8MzyPqCg6n" target="_blank" class="secondary">Join Discord</a>
+  </div>
 </section>
 
-<section id="about" class="section">
-    <h2>About Me</h2>
-    <p>I love building projects, streaming, and sharing what I do online. I’m always experimenting and learning new skills.</p>
-</section>
-
-<section id="links" class="section">
-    <h2>My Socials & Profiles</h2>
-    <div class="social-links">
-        <a href="https://github.com/ManKrawiec" target="_blank">GitHub</a>
-        <a href="https://www.twitch.tv/mankrawiec" target="_blank">Twitch</a>
-        <a href="https://www.tiktok.com/@pankrawiec11" target="_blank">TikTok</a>
-        <a href="https://discord.gg/8MzyPqCg6n" target="_blank">Discord</a>
-    </div>
-</section>
-
-<section id="contact" class="section">
-    <h2>Contact</h2>
-    <p>Feel free to reach out through any of the links above — I respond to messages, collabs & ideas!</p>
-</section>
-
-<footer>
-    © 2026 ManKrawiec. All rights reserved.
-</footer>
-
+<script src="script.js"></script>
 </body>
 </html>
