--- a/about.html
+++ b/about.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About | ManKrawiec</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -18,7 +19,43 @@
 
 <section class="hero">
   <h1>About Me</h1>
-  <p>I am a content creator focused on gaming, technology and community building.</p>
+  <p>Creator focused on gaming, coding and building an online community.</p>
+</section>
+
+<section class="section">
+  <div class="cards">
+
+    <div class="card">
+      <h3>🎮 Gaming</h3>
+      <p>I stream competitive and casual games, sharing highlights and live moments with my audience.</p>
+    </div>
+
+    <div class="card">
+      <h3>💻 Coding</h3>
+      <p>I experiment with programming, game development and technology projects.</p>
+    </div>
+
+    <div class="card">
+      <h3>🌍 Community</h3>
+      <p>My goal is to build a strong and active community around creativity and gaming.</p>
+    </div>
+
+  </div>
+</section>
+
+<section class="section">
+  <h2>Currently Working On</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>🚀 Growing the Brand</h3>
+      <p>Improving content quality and expanding across platforms.</p>
+    </div>
+
+    <div class="card">
+      <h3>🎯 New Projects</h3>
+      <p>Developing new ideas and coding experiments.</p>
+    </div>
+  </div>
 </section>
 
 </body>
