--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Community | ManKrawiec</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header>
+  <div class="logo">ManKrawiec</div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="content.html">Content</a>
+  </nav>
+</header>
+
 <section class="hero">
   <h1>Join the Community</h1>
+  <p>Be part of the journey. Watch, interact and grow together.</p>
 
   <div class="buttons">
-    <a href="https://github.com/ManKrawiec" target="_blank" class="primary">GitHub</a>
-    <a href="https://www.twitch.tv/mankrawiec" target="_blank" class="secondary">Twitch</a>
-    <a href="https://www.tiktok.com/@pankrawiec11" target="_blank" class="secondary">TikTok</a>
+    <a href="https://www.twitch.tv/mankrawiec" target="_blank" class="primary">Twitch</a>
     <a href="https://discord.gg/8MzyPqCg6n" target="_blank" class="secondary">Discord</a>
   </div>
 </section>
+
+<section class="section">
+  <h2>Find Me Everywhere</h2>
+
+  <div class="cards">
+
+    <div class="card">
+      <h3>💻 GitHub</h3>
+      <p>Explore my coding projects and experiments.</p>
+      <br>
+      <a href="https://github.com/ManKrawiec" target="_blank">Visit Profile</a>
+    </div>
+
+    <div class="card">
+      <h3>🎥 TikTok</h3>
+      <p>Short clips and highlights from streams.</p>
+      <br>
+      <a href="https://www.tiktok.com/@pankrawiec11" target="_blank">Watch Clips</a>
+    </div>
+
+    <div class="card">
+      <h3>🟣 Twitch</h3>
+      <p>Live streams and real-time interaction.</p>
+      <br>
+      <a href="https://www.twitch.tv/mankrawiec" target="_blank">Go Live</a>
+    </div>
+
+  </div>
+</section>
+
+</body>
+</html>
