--- a/index.html
+++ b/index.html
@@ -6,27 +6,29 @@
 <title>ManKrawiec</title>
 <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header>
-  <div class="logo">ManKrawiec</div>
-  <nav>
-    <a href="about.html">About</a>
-    <a href="content.html">Content</a>
-    <a href="contact.html">Community</a>
-  </nav>
+<div class="logo">ManKrawiec</div>
+
+<nav>
+<a href="index.html">Home</a>
+<a href="about.html">About</a>
+<a href="content.html">Content</a>
+<a href="contact.html">Community</a>
+</nav>
 </header>
 
 <section class="hero">
-  <h1>Streaming. Coding. Creating.</h1>
-  <p>Welcome to my official website.</p>
+<h1>Streaming. Coding. Creating.</h1>
+<p>Welcome to my official website.</p>
 
-  <div class="buttons">
-    <a href="https://www.twitch.tv/mankrawiec" target="_blank" class="primary">Watch on Twitch</a>
-    <a href="https://discord.gg/8MzyPqCg6n" target="_blank" class="secondary">Join Discord</a>
-  </div>
+<div class="buttons">
+<a href="https://www.twitch.tv/mankrawiec" class="primary">Watch Twitch</a>
+<a href="https://discord.gg/8MzyPqCg6n" class="secondary">Join Discord</a>
+</div>
 </section>
 
-<script src="script.js"></script>
 </body>
 </html>
