--- a/about.html
+++ b/about.html
@@ -2,60 +2,25 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>About | ManKrawiec</title>
+<title>About</title>
 <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header>
-  <div class="logo">ManKrawiec</div>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="content.html">Content</a>
-    <a href="contact.html">Community</a>
-  </nav>
+<div class="logo">ManKrawiec</div>
+
+<nav>
+<a href="index.html">Home</a>
+<a href="content.html">Content</a>
+<a href="contact.html">Community</a>
+</nav>
 </header>
 
 <section class="hero">
-  <h1>About Me</h1>
-  <p>Creator focused on gaming, coding and building an online community.</p>
-</section>
-
-<section class="section">
-  <div class="cards">
-
-    <div class="card">
-      <h3>🎮 Gaming</h3>
-      <p>I stream competitive and casual games, sharing highlights and live moments with my audience.</p>
-    </div>
-
-    <div class="card">
-      <h3>💻 Coding</h3>
-      <p>I experiment with programming, game development and technology projects.</p>
-    </div>
-
-    <div class="card">
-      <h3>🌍 Community</h3>
-      <p>My goal is to build a strong and active community around creativity and gaming.</p>
-    </div>
-
-  </div>
-</section>
-
-<section class="section">
-  <h2>Currently Working On</h2>
-  <div class="cards">
-    <div class="card">
-      <h3>🚀 Growing the Brand</h3>
-      <p>Improving content quality and expanding across platforms.</p>
-    </div>
-
-    <div class="card">
-      <h3>🎯 New Projects</h3>
-      <p>Developing new ideas and coding experiments.</p>
-    </div>
-  </div>
+<h1>About Me</h1>
+<p>I create and stream content online — gaming, coding and community.</p>
 </section>
 
 </body>
