--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>About</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>About — ManKrawiec</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
@@ -10,18 +11,75 @@
 
 <header>
 <div class="logo">ManKrawiec</div>
-
 <nav>
 <a href="index.html">Home</a>
+<a href="about.html" class="active">About</a>
 <a href="content.html">Content</a>
 <a href="contact.html">Community</a>
 </nav>
 </header>
 
 <section class="hero">
-<h1>About Me</h1>
-<p>I create and stream content online — gaming, coding and community.</p>
+<h1 class="fade-in">About Me</h1>
+<p class="fade-in-delay">Creator, streamer and coder — building cool things and sharing the journey.</p>
 </section>
 
+<section class="section">
+<p class="about-text reveal">
+Hey! I'm ManKrawiec — a passionate creator who loves gaming, coding and building communities.
+I stream regularly on Twitch, share my projects on GitHub, and connect with awesome people on Discord.
+Whether it's building Linux configs, web projects, or just having fun — I'm always creating something new.
+</p>
+
+<hr class="divider reveal">
+
+<div class="stats reveal">
+<div class="stat">
+<div class="stat-number">🎮</div>
+<div class="stat-label">Streamer</div>
+</div>
+<div class="stat">
+<div class="stat-number">💻</div>
+<div class="stat-label">Developer</div>
+</div>
+<div class="stat">
+<div class="stat-number">🐧</div>
+<div class="stat-label">Linux Enthusiast</div>
+</div>
+<div class="stat">
+<div class="stat-number">🤝</div>
+<div class="stat-label">Community Builder</div>
+</div>
+</div>
+
+<h2 class="section-title reveal">Skills & Interests</h2>
+<div class="cards">
+
+<div class="card reveal">
+<span class="card-icon">🌐</span>
+<h3>Web Development</h3>
+<p>HTML, CSS, JavaScript — building websites and web applications from scratch.</p>
+</div>
+
+<div class="card reveal">
+<span class="card-icon">🐧</span>
+<h3>Linux & Arch</h3>
+<p>Arch Linux user with custom Hyprland setup. Dotfiles and configs shared on GitHub.</p>
+</div>
+
+<div class="card reveal">
+<span class="card-icon">🎥</span>
+<h3>Content Creation</h3>
+<p>Live streaming, community building and sharing knowledge with others.</p>
+</div>
+
+</div>
+</section>
+
+<footer>
+<p>&copy; 2026 ManKrawiec. Built with ❤️</p>
+</footer>
+
+<script src="stript.js"></script>
 </body>
 </html>
