--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Community</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Community — ManKrawiec</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
@@ -10,23 +11,56 @@
 
 <header>
 <div class="logo">ManKrawiec</div>
-
 <nav>
 <a href="index.html">Home</a>
 <a href="about.html">About</a>
 <a href="content.html">Content</a>
+<a href="contact.html" class="active">Community</a>
 </nav>
 </header>
 
 <section class="hero">
-<h1>Join Community</h1>
-
-<div class="buttons">
-<a href="https://github.com/ManKrawiec" class="secondary">GitHub</a>
-<a href="https://www.twitch.tv/mankrawiec" class="primary">Twitch</a>
-</div>
-
+<h1 class="fade-in">Join the Community</h1>
+<p class="fade-in-delay">Find me across the internet — let's connect!</p>
 </section>
 
+<section class="section">
+<h2 class="section-title reveal">Find Me Here</h2>
+<hr class="divider reveal">
+
+<div class="social-grid">
+
+<a href="https://www.twitch.tv/mankrawiec" class="social-card reveal" target="_blank">
+<span class="social-icon">🟣</span>
+<div>
+<div class="social-name">Twitch</div>
+<div class="social-desc">Watch me stream live</div>
+</div>
+</a>
+
+<a href="https://github.com/ManKrawiec" class="social-card reveal" target="_blank">
+<span class="social-icon">⚫</span>
+<div>
+<div class="social-name">GitHub</div>
+<div class="social-desc">Open source projects & code</div>
+</div>
+</a>
+
+<a href="https://discord.gg/8MzyPqCg6n" class="social-card reveal" target="_blank">
+<span class="social-icon">🔵</span>
+<div>
+<div class="social-name">Discord</div>
+<div class="social-desc">Chat with the community</div>
+</div>
+</a>
+
+</div>
+</section>
+
+<footer>
+<p>&copy; 2026 ManKrawiec. Built with ❤️</p>
+</footer>
+
+<script src="stript.js"></script>
 </body>
 </html>
