--- a/content.html
+++ b/content.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Content</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Content — ManKrawiec</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
@@ -10,18 +11,52 @@
 
 <header>
 <div class="logo">ManKrawiec</div>
-
 <nav>
 <a href="index.html">Home</a>
 <a href="about.html">About</a>
+<a href="content.html" class="active">Content</a>
 <a href="contact.html">Community</a>
 </nav>
 </header>
 
 <section class="hero">
-<h1>My Content</h1>
-<p>Streams, clips and coding projects.</p>
+<h1 class="fade-in">My Content</h1>
+<p class="fade-in-delay">Streams, projects and everything I create.</p>
 </section>
 
+<section class="section">
+<h2 class="section-title reveal">Featured</h2>
+<hr class="divider reveal">
+<div class="cards">
+
+<div class="card reveal">
+<span class="card-icon">📺</span>
+<h3>Twitch Streams</h3>
+<p>Live coding sessions, gaming and chill streams. Come hang out!</p>
+<a href="https://www.twitch.tv/mankrawiec">Watch live →</a>
+</div>
+
+<div class="card reveal">
+<span class="card-icon">🔧</span>
+<h3>Dotfiles & Configs</h3>
+<p>My Arch Linux + Hyprland setup — custom themes, scripts and configurations.</p>
+<a href="https://github.com/ManKrawiec">Browse repos →</a>
+</div>
+
+<div class="card reveal">
+<span class="card-icon">🌍</span>
+<h3>This Website</h3>
+<p>Built from scratch with pure HTML, CSS and JS. Hosted on GitHub Pages.</p>
+<a href="https://github.com/ManKrawiec/ManKrawiec.github.io">View source →</a>
+</div>
+
+</div>
+</section>
+
+<footer>
+<p>&copy; 2026 ManKrawiec. Built with ❤️</p>
+</footer>
+
+<script src="stript.js"></script>
 </body>
 </html>
