--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
 <header>
 <div class="logo">ManKrawiec</div>
-
 <nav>
-<a href="index.html">Home</a>
+<a href="index.html" class="active">Home</a>
 <a href="about.html">About</a>
 <a href="content.html">Content</a>
 <a href="contact.html">Community</a>
@@ -21,14 +20,48 @@
 </header>
 
 <section class="hero">
-<h1>Streaming. Coding. Creating.</h1>
-<p>Welcome to my official website.</p>
+<h1 class="fade-in">Streaming. Coding. Creating.</h1>
+<p class="fade-in-delay">Welcome to my official website — where gaming meets code and community.</p>
 
-<div class="buttons">
-<a href="https://www.twitch.tv/mankrawiec" class="primary">Watch Twitch</a>
-<a href="https://discord.gg/8MzyPqCg6n" class="secondary">Join Discord</a>
+<div class="buttons fade-in-delay-2">
+<a href="https://www.twitch.tv/mankrawiec" class="primary">▶ Watch Twitch</a>
+<a href="https://discord.gg/8MzyPqCg6n" class="secondary">💬 Join Discord</a>
 </div>
 </section>
 
+<section class="section">
+<h2 class="section-title reveal">What I Do</h2>
+<hr class="divider reveal">
+<div class="cards">
+
+<div class="card reveal">
+<span class="card-icon">🎮</span>
+<h3>Live Streams</h3>
+<p>Watch me play, code and build projects live on Twitch. Interactive streams with the community.</p>
+<a href="https://www.twitch.tv/mankrawiec">Watch now →</a>
+</div>
+
+<div class="card reveal">
+<span class="card-icon">💻</span>
+<h3>Coding Projects</h3>
+<p>Open source projects, tools and experiments. From web apps to system configurations.</p>
+<a href="https://github.com/ManKrawiec">View on GitHub →</a>
+</div>
+
+<div class="card reveal">
+<span class="card-icon">🚀</span>
+<h3>Community</h3>
+<p>Join a growing community of gamers, coders and creators on Discord.</p>
+<a href="https://discord.gg/8MzyPqCg6n">Join Discord →</a>
+</div>
+
+</div>
+</section>
+
+<footer>
+<p>&copy; 2026 ManKrawiec. Built with ❤️</p>
+</footer>
+
+<script src="stript.js"></script>
 </body>
 </html>
