--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 
 <section class="hero">
 <h1 class="fade-in">Streaming. Coding. Creating.</h1>
-<p class="fade-in-delay">Welcome to my official website — where gaming meets code and community.</p>
+<p class="fade-in-delay">Gamer i twórca z Polski — streamuję War Thunder, kocham CoD i Battlefield, a po godzinach koduję i buduję projekty.</p>
+<div class="fade-in-delay-2">
+<span class="location">🇵🇱 Polska</span>
+</div>
 
 <div class="buttons fade-in-delay-2">
 <a href="https://www.twitch.tv/mankrawiec" class="primary">▶ Watch Twitch</a>
@@ -55,6 +58,19 @@
 <a href="https://discord.gg/8MzyPqCg6n">Join Discord →</a>
 </div>
 
+</div>
+</section>
+
+<section class="section">
+<h2 class="section-title reveal">Streaming Partner</h2>
+<hr class="divider reveal">
+<div class="buddy-section reveal">
+<div class="buddy-avatar">🎮</div>
+<div class="buddy-info">
+<h3>Safigy</h3>
+<p>Mój stały partner na streamach. Razem gramy, razem tworzymy content — War Thunder, Battlefield i wszystko co wpadnie pod rękę.</p>
+<a href="https://www.twitch.tv/safigy" target="_blank">🟣 Safigy na Twitch</a>
+</div>
 </div>
 </section>
 
