--- a/about.html
+++ b/about.html
@@ -21,14 +21,18 @@
 
 <section class="hero">
 <h1 class="fade-in">About Me</h1>
-<p class="fade-in-delay">Creator, streamer and coder — building cool things and sharing the journey.</p>
+<p class="fade-in-delay">Gamer, streamer i twórca z Polski — żyję grami, kodem i społecznością.</p>
+<div class="fade-in-delay-2">
+<span class="location">🇵🇱 Polska</span>
+</div>
 </section>
 
 <section class="section">
 <p class="about-text reveal">
-Hey! I'm ManKrawiec — a passionate creator who loves gaming, coding and building communities.
-I stream regularly on Twitch, share my projects on GitHub, and connect with awesome people on Discord.
-Whether it's building Linux configs, web projects, or just having fun — I'm always creating something new.
+Siema! Jestem ManKrawiec — gamer i twórca z Polski. Na co dzień streamuję na Twitchu,
+gram głównie w War Thunder, ale też kocham Call of Duty i Battlefield.
+Po godzinach koduję, bawię się Linuxem i buduję różne projekty — od stron internetowych po własną dystrybucję Linuxa.
+Często gram ze swoim partnerem streamowym <a href="https://www.twitch.tv/safigy" style="color:#7b61ff">Safigym</a> — wpadajcie na streamy!
 </p>
 
 <hr class="divider reveal">
@@ -44,35 +48,104 @@ Whether it's building Linux configs, web projects, or just having fun — I'm al
 </div>
 <div class="stat">
 <div class="stat-number">🐧</div>
-<div class="stat-label">Linux Enthusiast</div>
+<div class="stat-label">Arch Linux User</div>
 </div>
 <div class="stat">
-<div class="stat-number">🤝</div>
-<div class="stat-label">Community Builder</div>
+<div class="stat-number">🇵🇱</div>
+<div class="stat-label">Polska</div>
 </div>
 </div>
 
-<h2 class="section-title reveal">Skills & Interests</h2>
+<h2 class="section-title reveal">Moje gry</h2>
 <div class="cards">
+
+<div class="image-card reveal">
+<div class="img-placeholder warthunder">
+✈️
+<span class="placeholder-text">War Thunder</span>
+</div>
+<div class="card-body">
+<h3>War Thunder</h3>
+<p>Moja główna gra — czołgi, samoloty i okręty. Grind nigdy się nie kończy, ale satysfakcja z dobrego fragsa jest bezcenna.</p>
+<span class="tag">Main Game</span>
+<span class="tag orange">MMO</span>
+</div>
+</div>
+
+<div class="image-card reveal">
+<div class="img-placeholder cod">
+🔫
+<span class="placeholder-text">Call of Duty</span>
+</div>
+<div class="card-body">
+<h3>Call of Duty</h3>
+<p>Wielbiciel serii CoD — od klasyków po najnowsze części. Szybka akcja, szybkie fragi.</p>
+<span class="tag purple">FPS</span>
+<span class="tag">Ulubiona seria</span>
+</div>
+</div>
+
+<div class="image-card reveal">
+<div class="img-placeholder battlefield">
+💥
+<span class="placeholder-text">Battlefield</span>
+</div>
+<div class="card-body">
+<h3>Battlefield</h3>
+<p>Wielkie bitwy, pojazdy, destrukcja — Battlefield to gra na której zawsze można polegać jeśli chodzi o epic momenty.</p>
+<span class="tag purple">FPS</span>
+<span class="tag orange">Large Scale</span>
+</div>
+</div>
+
+</div>
+</section>
+
+<section class="section">
+<h2 class="section-title reveal">Projekty</h2>
+<hr class="divider reveal">
+<div class="cards">
+
+<div class="image-card reveal">
+<div class="img-placeholder linexin">
+🐧
+<span class="placeholder-text">Linexin</span>
+</div>
+<div class="card-body">
+<h3>Linexin</h3>
+<p>Mój własny projekt dystrybucji Linuxa. Jeszcze nie jest idealny, ale to była mega nauka — od bootloadera po desktop.</p>
+<span class="tag">Linux Distro</span>
+<span class="tag purple">W trakcie</span>
+</div>
+</div>
 
 <div class="card reveal">
 <span class="card-icon">🌐</span>
-<h3>Web Development</h3>
-<p>HTML, CSS, JavaScript — building websites and web applications from scratch.</p>
+<h3>Ta strona</h3>
+<p>Moja strona osobista — pisana od zera w HTML, CSS i JS. Hostowana na GitHub Pages.</p>
+<span class="tag">Web</span>
 </div>
 
 <div class="card reveal">
-<span class="card-icon">🐧</span>
-<h3>Linux & Arch</h3>
-<p>Arch Linux user with custom Hyprland setup. Dotfiles and configs shared on GitHub.</p>
+<span class="card-icon">⚙️</span>
+<h3>Dotfiles & Hyprland</h3>
+<p>Mój setup Arch Linux z Hyprland — custom motywy, skrypty, konfiguracje. Wszystko na GitHubie.</p>
+<span class="tag">Arch Linux</span>
 </div>
 
-<div class="card reveal">
-<span class="card-icon">🎥</span>
-<h3>Content Creation</h3>
-<p>Live streaming, community building and sharing knowledge with others.</p>
 </div>
+</section>
 
+<section class="section">
+<h2 class="section-title reveal">Gaming Buddy</h2>
+<hr class="divider reveal">
+<div class="buddy-section reveal">
+<div class="buddy-avatar">🎮</div>
+<div class="buddy-info">
+<h3>Safigy</h3>
+<p>Mój stały partner na streamach i w grach. Razem latamy w War Thunder, rozwalamy w Battlefield i ogólnie robimy content. Wpadajcie do niego!</p>
+<a href="https://www.twitch.tv/safigy" target="_blank">🟣 Safigy na Twitch</a>
+</div>
 </div>
 </section>
 
