--- a/content.html
+++ b/content.html
@@ -21,33 +21,99 @@
 
 <section class="hero">
 <h1 class="fade-in">My Content</h1>
-<p class="fade-in-delay">Streams, projects and everything I create.</p>
+<p class="fade-in-delay">Gry, streamy, projekty — wszystko co tworzę w jednym miejscu.</p>
 </section>
 
 <section class="section">
-<h2 class="section-title reveal">Featured</h2>
+<h2 class="section-title reveal">W co gram</h2>
 <hr class="divider reveal">
 <div class="cards">
 
-<div class="card reveal">
-<span class="card-icon">📺</span>
-<h3>Twitch Streams</h3>
-<p>Live coding sessions, gaming and chill streams. Come hang out!</p>
-<a href="https://www.twitch.tv/mankrawiec">Watch live →</a>
+<div class="image-card reveal">
+<div class="img-placeholder warthunder">
+✈️
+<span class="placeholder-text">War Thunder</span>
+</div>
+<div class="card-body">
+<h3>War Thunder</h3>
+<p>Główna gra na streamach. Czołgi, samoloty, okręty — grind trwa, ale fragi są tego warte.</p>
+<span class="tag">Main Game</span>
+<span class="tag orange">MMO</span>
+</div>
+</div>
+
+<div class="image-card reveal">
+<div class="img-placeholder cod">
+🔫
+<span class="placeholder-text">Call of Duty</span>
+</div>
+<div class="card-body">
+<h3>Call of Duty</h3>
+<p>Jedna z moich ulubionych serii. Od kampanii po multiplayer — klasyka gatunku FPS.</p>
+<span class="tag purple">FPS</span>
+<span class="tag">Ulubiona seria</span>
+</div>
+</div>
+
+<div class="image-card reveal">
+<div class="img-placeholder battlefield">
+💥
+<span class="placeholder-text">Battlefield</span>
+</div>
+<div class="card-body">
+<h3>Battlefield</h3>
+<p>Wielkie mapy, destrukcja, pojazdy. Battlefield to definicja epic momentu w grach.</p>
+<span class="tag purple">FPS</span>
+<span class="tag orange">Large Scale</span>
+</div>
+</div>
+
+</div>
+</section>
+
+<section class="section">
+<h2 class="section-title reveal">Streaming z Safigym</h2>
+<hr class="divider reveal">
+<div class="buddy-section reveal">
+<div class="buddy-avatar">🎮</div>
+<div class="buddy-info">
+<h3>Safigy</h3>
+<p>Mój stały partner na streamach. Wspólne sesje w War Thunder i Battlefield — duo, które warto oglądać!</p>
+<a href="https://www.twitch.tv/safigy" target="_blank">🟣 Safigy na Twitch</a>
+</div>
+</div>
+</section>
+
+<section class="section">
+<h2 class="section-title reveal">Projekty</h2>
+<hr class="divider reveal">
+<div class="cards">
+
+<div class="image-card reveal">
+<div class="img-placeholder linexin">
+🐧
+<span class="placeholder-text">Linexin</span>
+</div>
+<div class="card-body">
+<h3>Linexin — Linux Distro</h3>
+<p>Własna dystrybucja Linuxa. Projekt w trakcie rozwoju — dużo nauki od bootloadera po środowisko graficzne.</p>
+<span class="tag">Linux</span>
+<span class="tag purple">W trakcie</span>
+</div>
 </div>
 
 <div class="card reveal">
-<span class="card-icon">🔧</span>
-<h3>Dotfiles & Configs</h3>
-<p>My Arch Linux + Hyprland setup — custom themes, scripts and configurations.</p>
-<a href="https://github.com/ManKrawiec">Browse repos →</a>
+<span class="card-icon">⚙️</span>
+<h3>Arch + Hyprland Dotfiles</h3>
+<p>Mój custom setup — motywy, skrypty, konfiguracje. Wszystko open source na GitHubie.</p>
+<a href="https://github.com/ManKrawiec">GitHub →</a>
 </div>
 
 <div class="card reveal">
-<span class="card-icon">🌍</span>
-<h3>This Website</h3>
-<p>Built from scratch with pure HTML, CSS and JS. Hosted on GitHub Pages.</p>
-<a href="https://github.com/ManKrawiec/ManKrawiec.github.io">View source →</a>
+<span class="card-icon">🌐</span>
+<h3>ManKrawiec.github.io</h3>
+<p>Ta strona — pisana od zera w HTML, CSS i JS. Bez frameworków, pure web dev.</p>
+<a href="https://github.com/ManKrawiec/ManKrawiec.github.io">Źródło →</a>
 </div>
 
 </div>
