--- a/about.html
+++ b/about.html
@@ -21,18 +21,18 @@
 
 <section class="hero">
 <h1 class="fade-in">About Me</h1>
-<p class="fade-in-delay">Gamer, streamer i twórca z Polski — żyję grami, kodem i społecznością.</p>
+<p class="fade-in-delay">Gamer, streamer and creator from Poland — I live for games, code and community.</p>
 <div class="fade-in-delay-2">
-<span class="location">🇵🇱 Polska</span>
+<span class="location">🇵🇱 Poland</span>
 </div>
 </section>
 
 <section class="section">
 <p class="about-text reveal">
-Siema! Jestem ManKrawiec — gamer i twórca z Polski. Na co dzień streamuję na Twitchu,
-gram głównie w War Thunder, ale też kocham Call of Duty i Battlefield.
-Po godzinach koduję, bawię się Linuxem i buduję różne projekty — od stron internetowych po własną dystrybucję Linuxa.
-Często gram ze swoim partnerem streamowym <a href="https://www.twitch.tv/safigy" style="color:#7b61ff">Safigym</a> — wpadajcie na streamy!
+Hey! I'm ManKrawiec — a gamer and creator from Poland. I stream on Twitch daily,
+mainly playing War Thunder, but I also love Call of Duty and Battlefield.
+In my free time I code, tinker with Linux and build various projects — from websites to my own Linux distribution.
+I often play with my streaming partner <a href="https://www.twitch.tv/safigy" style="color:#7b61ff">Safigy</a> — come join the streams!
 </p>
 
 <hr class="divider reveal">
@@ -52,47 +52,38 @@ Często gram ze swoim partnerem streamowym <a href="https://www.twitch.tv/safigy
 </div>
 <div class="stat">
 <div class="stat-number">🇵🇱</div>
-<div class="stat-label">Polska</div>
+<div class="stat-label">Poland</div>
 </div>
 </div>
 
-<h2 class="section-title reveal">Moje gry</h2>
+<h2 class="section-title reveal">My Games</h2>
 <div class="cards">
 
 <div class="image-card reveal">
-<div class="img-placeholder warthunder">
-✈️
-<span class="placeholder-text">War Thunder</span>
-</div>
+<img src="img/warthunder.jpg" alt="War Thunder">
 <div class="card-body">
 <h3>War Thunder</h3>
-<p>Moja główna gra — czołgi, samoloty i okręty. Grind nigdy się nie kończy, ale satysfakcja z dobrego fragsa jest bezcenna.</p>
+<p>My main game — tanks, planes and ships. The grind never ends, but the satisfaction of a good frag is priceless.</p>
 <span class="tag">Main Game</span>
 <span class="tag orange">MMO</span>
 </div>
 </div>
 
 <div class="image-card reveal">
-<div class="img-placeholder cod">
-🔫
-<span class="placeholder-text">Call of Duty</span>
-</div>
+<img src="img/cod.jpg" alt="Call of Duty">
 <div class="card-body">
 <h3>Call of Duty</h3>
-<p>Wielbiciel serii CoD — od klasyków po najnowsze części. Szybka akcja, szybkie fragi.</p>
+<p>A true CoD fan — from the classics to the latest entries. Fast action, fast frags.</p>
 <span class="tag purple">FPS</span>
-<span class="tag">Ulubiona seria</span>
+<span class="tag">Favorite Series</span>
 </div>
 </div>
 
 <div class="image-card reveal">
-<div class="img-placeholder battlefield">
-💥
-<span class="placeholder-text">Battlefield</span>
-</div>
+<img src="img/battlefield.jpg" alt="Battlefield">
 <div class="card-body">
 <h3>Battlefield</h3>
-<p>Wielkie bitwy, pojazdy, destrukcja — Battlefield to gra na której zawsze można polegać jeśli chodzi o epic momenty.</p>
+<p>Massive battles, vehicles, destruction — Battlefield is the game you can always count on for epic moments.</p>
 <span class="tag purple">FPS</span>
 <span class="tag orange">Large Scale</span>
 </div>
@@ -102,7 +93,7 @@ Często gram ze swoim partnerem streamowym <a href="https://www.twitch.tv/safigy
 </section>
 
 <section class="section">
-<h2 class="section-title reveal">Projekty</h2>
+<h2 class="section-title reveal">Projects</h2>
 <hr class="divider reveal">
 <div class="cards">
 
@@ -113,23 +104,23 @@ Często gram ze swoim partnerem streamowym <a href="https://www.twitch.tv/safigy
 </div>
 <div class="card-body">
 <h3>Linexin</h3>
-<p>Mój własny projekt dystrybucji Linuxa. Jeszcze nie jest idealny, ale to była mega nauka — od bootloadera po desktop.</p>
+<p>My own Linux distribution project. It's not perfect yet, but it was a massive learning experience — from bootloader to desktop.</p>
 <span class="tag">Linux Distro</span>
-<span class="tag purple">W trakcie</span>
+<span class="tag purple">In Progress</span>
 </div>
 </div>
 
 <div class="card reveal">
 <span class="card-icon">🌐</span>
-<h3>Ta strona</h3>
-<p>Moja strona osobista — pisana od zera w HTML, CSS i JS. Hostowana na GitHub Pages.</p>
+<h3>This Website</h3>
+<p>My personal website — written from scratch in HTML, CSS and JS. Hosted on GitHub Pages.</p>
 <span class="tag">Web</span>
 </div>
 
 <div class="card reveal">
 <span class="card-icon">⚙️</span>
 <h3>Dotfiles & Hyprland</h3>
-<p>Mój setup Arch Linux z Hyprland — custom motywy, skrypty, konfiguracje. Wszystko na GitHubie.</p>
+<p>My Arch Linux setup with Hyprland — custom themes, scripts, configs. All open source on GitHub.</p>
 <span class="tag">Arch Linux</span>
 </div>
 
@@ -143,8 +134,8 @@ Często gram ze swoim partnerem streamowym <a href="https://www.twitch.tv/safigy
 <div class="buddy-avatar">🎮</div>
 <div class="buddy-info">
 <h3>Safigy</h3>
-<p>Mój stały partner na streamach i w grach. Razem latamy w War Thunder, rozwalamy w Battlefield i ogólnie robimy content. Wpadajcie do niego!</p>
-<a href="https://www.twitch.tv/safigy" target="_blank">🟣 Safigy na Twitch</a>
+<p>My regular partner on streams and in games. We fly together in War Thunder, dominate in Battlefield and just create content. Check him out!</p>
+<a href="https://www.twitch.tv/safigy" target="_blank">🟣 Safigy on Twitch</a>
 </div>
 </div>
 </section>
