--- a/content.html
+++ b/content.html
@@ -21,48 +21,39 @@
 
 <section class="hero">
 <h1 class="fade-in">My Content</h1>
-<p class="fade-in-delay">Gry, streamy, projekty — wszystko co tworzę w jednym miejscu.</p>
+<p class="fade-in-delay">Games, streams, projects — everything I create in one place.</p>
 </section>
 
 <section class="section">
-<h2 class="section-title reveal">W co gram</h2>
+<h2 class="section-title reveal">What I Play</h2>
 <hr class="divider reveal">
 <div class="cards">
 
 <div class="image-card reveal">
-<div class="img-placeholder warthunder">
-✈️
-<span class="placeholder-text">War Thunder</span>
-</div>
+<img src="img/warthunder.jpg" alt="War Thunder">
 <div class="card-body">
 <h3>War Thunder</h3>
-<p>Główna gra na streamach. Czołgi, samoloty, okręty — grind trwa, ale fragi są tego warte.</p>
+<p>My main game on stream. Tanks, planes, ships — the grind goes on, but the frags are worth it.</p>
 <span class="tag">Main Game</span>
 <span class="tag orange">MMO</span>
 </div>
 </div>
 
 <div class="image-card reveal">
-<div class="img-placeholder cod">
-🔫
-<span class="placeholder-text">Call of Duty</span>
-</div>
+<img src="img/cod.jpg" alt="Call of Duty">
 <div class="card-body">
 <h3>Call of Duty</h3>
-<p>Jedna z moich ulubionych serii. Od kampanii po multiplayer — klasyka gatunku FPS.</p>
+<p>One of my favorite series. From campaigns to multiplayer — a true FPS classic.</p>
 <span class="tag purple">FPS</span>
-<span class="tag">Ulubiona seria</span>
+<span class="tag">Favorite Series</span>
 </div>
 </div>
 
 <div class="image-card reveal">
-<div class="img-placeholder battlefield">
-💥
-<span class="placeholder-text">Battlefield</span>
-</div>
+<img src="img/battlefield.jpg" alt="Battlefield">
 <div class="card-body">
 <h3>Battlefield</h3>
-<p>Wielkie mapy, destrukcja, pojazdy. Battlefield to definicja epic momentu w grach.</p>
+<p>Massive maps, destruction, vehicles. Battlefield is the definition of an epic gaming moment.</p>
 <span class="tag purple">FPS</span>
 <span class="tag orange">Large Scale</span>
 </div>
@@ -72,20 +63,20 @@
 </section>
 
 <section class="section">
-<h2 class="section-title reveal">Streaming z Safigym</h2>
+<h2 class="section-title reveal">Streaming with Safigy</h2>
 <hr class="divider reveal">
 <div class="buddy-section reveal">
 <div class="buddy-avatar">🎮</div>
 <div class="buddy-info">
 <h3>Safigy</h3>
-<p>Mój stały partner na streamach. Wspólne sesje w War Thunder i Battlefield — duo, które warto oglądać!</p>
-<a href="https://www.twitch.tv/safigy" target="_blank">🟣 Safigy na Twitch</a>
+<p>My regular streaming partner. Joint sessions in War Thunder and Battlefield — a duo worth watching!</p>
+<a href="https://www.twitch.tv/safigy" target="_blank">🟣 Safigy on Twitch</a>
 </div>
 </div>
 </section>
 
 <section class="section">
-<h2 class="section-title reveal">Projekty</h2>
+<h2 class="section-title reveal">Projects</h2>
 <hr class="divider reveal">
 <div class="cards">
 
@@ -96,24 +87,24 @@
 </div>
 <div class="card-body">
 <h3>Linexin — Linux Distro</h3>
-<p>Własna dystrybucja Linuxa. Projekt w trakcie rozwoju — dużo nauki od bootloadera po środowisko graficzne.</p>
+<p>My own Linux distribution. A project in progress — tons of learning from bootloader to desktop environment.</p>
 <span class="tag">Linux</span>
-<span class="tag purple">W trakcie</span>
+<span class="tag purple">In Progress</span>
 </div>
 </div>
 
 <div class="card reveal">
 <span class="card-icon">⚙️</span>
 <h3>Arch + Hyprland Dotfiles</h3>
-<p>Mój custom setup — motywy, skrypty, konfiguracje. Wszystko open source na GitHubie.</p>
+<p>My custom setup — themes, scripts, configs. All open source on GitHub.</p>
 <a href="https://github.com/ManKrawiec">GitHub →</a>
 </div>
 
 <div class="card reveal">
 <span class="card-icon">🌐</span>
 <h3>ManKrawiec.github.io</h3>
-<p>Ta strona — pisana od zera w HTML, CSS i JS. Bez frameworków, pure web dev.</p>
-<a href="https://github.com/ManKrawiec/ManKrawiec.github.io">Źródło →</a>
+<p>This website — built from scratch in HTML, CSS and JS. No frameworks, pure web dev.</p>
+<a href="https://github.com/ManKrawiec/ManKrawiec.github.io">Source →</a>
 </div>
 
 </div>
