--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <section class="hero">
 <h1 class="fade-in">Streaming. Coding. Creating.</h1>
-<p class="fade-in-delay">Gamer i twórca z Polski — streamuję War Thunder, kocham CoD i Battlefield, a po godzinach koduję i buduję projekty.</p>
+<p class="fade-in-delay">Gamer and creator from Poland — I stream War Thunder, love CoD and Battlefield, and build projects in my spare time.</p>
 <div class="fade-in-delay-2">
-<span class="location">🇵🇱 Polska</span>
+<span class="location">🇵🇱 Poland</span>
 </div>
 
 <div class="buttons fade-in-delay-2">
@@ -68,8 +68,8 @@
 <div class="buddy-avatar">🎮</div>
 <div class="buddy-info">
 <h3>Safigy</h3>
-<p>Mój stały partner na streamach. Razem gramy, razem tworzymy content — War Thunder, Battlefield i wszystko co wpadnie pod rękę.</p>
-<a href="https://www.twitch.tv/safigy" target="_blank">🟣 Safigy na Twitch</a>
+<p>My regular streaming partner. We play together, create content together — War Thunder, Battlefield and whatever else we feel like.</p>
+<a href="https://www.twitch.tv/safigy" target="_blank">🟣 Safigy on Twitch</a>
 </div>
 </div>
 </section>
