--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@ I often play with my streaming partner <a href="https://www.twitch.tv/safigy" st
 </div>
 
 <div class="image-card reveal">
-<img src="img/cod.jpg" alt="Call of Duty">
+<img src="img/cod.webp" alt="Call of Duty">
 <div class="card-body">
 <h3>Call of Duty</h3>
 <p>A true CoD fan — from the classics to the latest entries. Fast action, fast frags.</p>
@@ -80,7 +80,7 @@ I often play with my streaming partner <a href="https://www.twitch.tv/safigy" st
 </div>
 
 <div class="image-card reveal">
-<img src="img/battlefield.jpg" alt="Battlefield">
+<img src="img/battlefield.webp" alt="Battlefield">
 <div class="card-body">
 <h3>Battlefield</h3>
 <p>Massive battles, vehicles, destruction — Battlefield is the game you can always count on for epic moments.</p>
