--- a/content.html
+++ b/content.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="image-card reveal">
-<img src="img/cod.jpg" alt="Call of Duty">
+<img src="img/cod.webp" alt="Call of Duty">
 <div class="card-body">
 <h3>Call of Duty</h3>
 <p>One of my favorite series. From campaigns to multiplayer — a true FPS classic.</p>
@@ -50,7 +50,7 @@
 </div>
 
 <div class="image-card reveal">
-<img src="img/battlefield.jpg" alt="Battlefield">
+<img src="img/battlefield.webp" alt="Battlefield">
 <div class="card-body">
 <h3>Battlefield</h3>
 <p>Massive maps, destruction, vehicles. Battlefield is the definition of an epic gaming moment.</p>
