--- a/content.html
+++ b/content.html
@@ -66,7 +66,7 @@
 <h2 class="section-title reveal">Streaming with Safigy</h2>
 <hr class="divider reveal">
 <div class="buddy-section reveal">
-<div class="buddy-avatar">🎮</div>
+<img src="img/Joel.png" alt="Safigy" class="buddy-avatar">
 <div class="buddy-info">
 <h3>Safigy</h3>
 <p>My regular streaming partner. Joint sessions in War Thunder and Battlefield — a duo worth watching!</p>
