--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@ I often play with my streaming partner <a href="https://www.twitch.tv/safigy" st
 <h2 class="section-title reveal">Gaming Buddy</h2>
 <hr class="divider reveal">
 <div class="buddy-section reveal">
-<div class="buddy-avatar">🎮</div>
+<img src="img/Joel.png" alt="Safigy" class="buddy-avatar">
 <div class="buddy-info">
 <h3>Safigy</h3>
 <p>My regular partner on streams and in games. We fly together in War Thunder, dominate in Battlefield and just create content. Check him out!</p>
