--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <h2 class="section-title reveal">Streaming Partner</h2>
 <hr class="divider reveal">
 <div class="buddy-section reveal">
-<div class="buddy-avatar">🎮</div>
+<img src="img/Joel.png" alt="Safigy" class="buddy-avatar">
 <div class="buddy-info">
 <h3>Safigy</h3>
 <p>My regular streaming partner. We play together, create content together — War Thunder, Battlefield and whatever else we feel like.</p>
