--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
 </header>
 
 <section class="hero">
+<img src="img/ManKrawiec.jpeg" alt="ManKrawiec" class="hero-avatar fade-in">
 <h1 class="fade-in">About Me</h1>
 <p class="fade-in-delay">Gamer, streamer and creator from Poland — I live for games, code and community.</p>
 <div class="fade-in-delay-2">
