--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </header>
 
 <section class="hero">
+<img src="img/ManKrawiec.jpeg" alt="ManKrawiec" class="hero-avatar fade-in">
 <h1 class="fade-in">Streaming. Coding. Creating.</h1>
 <p class="fade-in-delay">Gamer and creator from Poland — I stream War Thunder, love CoD and Battlefield, and build projects in my spare time.</p>
 <div class="fade-in-delay-2">
