--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,11 @@
 </nav>
 </header>
 
-<section class="hero">
+<section class="hero centered">
+<div class="hero-text">
 <h1 class="fade-in">Join the Community</h1>
 <p class="fade-in-delay">Find me across the internet — let's connect!</p>
+</div>
 </section>
 
 <section class="section">
