--- a/content.html
+++ b/content.html
@@ -19,9 +19,11 @@
 </nav>
 </header>
 
-<section class="hero">
+<section class="hero centered">
+<div class="hero-text">
 <h1 class="fade-in">My Content</h1>
 <p class="fade-in-delay">Games, streams, projects — everything I create in one place.</p>
+</div>
 </section>
 
 <section class="section">
