--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
 </header>
 
 <section class="hero">
-<img src="img/ManKrawiec.jpeg" alt="ManKrawiec" class="hero-avatar fade-in">
+<div class="hero-text">
 <h1 class="fade-in">Streaming. Coding. Creating.</h1>
 <p class="fade-in-delay">Gamer and creator from Poland — I stream War Thunder, love CoD and Battlefield, and build projects in my spare time.</p>
 <div class="fade-in-delay-2">
 <span class="location">🇵🇱 Poland</span>
 </div>
-
 <div class="buttons fade-in-delay-2">
 <a href="https://www.twitch.tv/mankrawiec" class="primary">▶ Watch Twitch</a>
 <a href="https://discord.gg/8MzyPqCg6n" class="secondary">💬 Join Discord</a>
 </div>
+</div>
+<img src="img/ManKrawiec.jpeg" alt="ManKrawiec" class="hero-avatar fade-in-delay">
 </section>
 
 <section class="section">
