--- a/about.html
+++ b/about.html
@@ -131,15 +131,28 @@ I often play with my streaming partner <a href="https://www.twitch.tv/safigy" st
 </section>
 
 <section class="section">
-<h2 class="section-title reveal">Gaming Buddy</h2>
+<h2 class="section-title reveal">Gaming Squad</h2>
 <hr class="divider reveal">
+<div class="buddies">
+
 <div class="buddy-section reveal">
 <img src="img/Joel.png" alt="Safigy" class="buddy-avatar">
 <div class="buddy-info">
 <h3>Safigy</h3>
-<p>My regular partner on streams and in games. We fly together in War Thunder, dominate in Battlefield and just create content. Check him out!</p>
+<p>My streaming partner. We fly together in War Thunder, dominate in Battlefield and create content. Check him out!</p>
 <a href="https://www.twitch.tv/safigy" target="_blank">🟣 Safigy on Twitch</a>
 </div>
+</div>
+
+<div class="buddy-section reveal">
+<img src="img/Jajko.jpeg" alt="JajkoPL" class="buddy-avatar">
+<div class="buddy-info">
+<h3>JajkoPL</h3>
+<p>My main War Thunder buddy. We grind together daily, and sometimes team up with Safigy for a full squad.</p>
+<a href="https://www.tiktok.com/@polishmig" target="_blank">🎵 JajkoPL on TikTok</a>
+</div>
+</div>
+
 </div>
 </section>
 
