--- a/content.html
+++ b/content.html
@@ -65,15 +65,28 @@
 </section>
 
 <section class="section">
-<h2 class="section-title reveal">Streaming with Safigy</h2>
+<h2 class="section-title reveal">Gaming Squad</h2>
 <hr class="divider reveal">
+<div class="buddies">
+
 <div class="buddy-section reveal">
 <img src="img/Joel.png" alt="Safigy" class="buddy-avatar">
 <div class="buddy-info">
 <h3>Safigy</h3>
-<p>My regular streaming partner. Joint sessions in War Thunder and Battlefield — a duo worth watching!</p>
+<p>Streaming partner. Joint sessions in War Thunder and Battlefield — a duo worth watching!</p>
 <a href="https://www.twitch.tv/safigy" target="_blank">🟣 Safigy on Twitch</a>
 </div>
+</div>
+
+<div class="buddy-section reveal">
+<img src="img/Jajko.jpeg" alt="JajkoPL" class="buddy-avatar">
+<div class="buddy-info">
+<h3>JajkoPL</h3>
+<p>My main War Thunder partner. Daily grind sessions, and sometimes we team up with Safigy for full squad chaos.</p>
+<a href="https://www.tiktok.com/@polishmig" target="_blank">🎵 JajkoPL on TikTok</a>
+</div>
+</div>
+
 </div>
 </section>
 
