--- a/index.html
+++ b/index.html
@@ -64,15 +64,28 @@
 </section>
 
 <section class="section">
-<h2 class="section-title reveal">Streaming Partner</h2>
+<h2 class="section-title reveal">Gaming Squad</h2>
 <hr class="divider reveal">
+<div class="buddies">
+
 <div class="buddy-section reveal">
 <img src="img/Joel.png" alt="Safigy" class="buddy-avatar">
 <div class="buddy-info">
 <h3>Safigy</h3>
-<p>My regular streaming partner. We play together, create content together — War Thunder, Battlefield and whatever else we feel like.</p>
+<p>My streaming partner. We play War Thunder, Battlefield and whatever else we feel like.</p>
 <a href="https://www.twitch.tv/safigy" target="_blank">🟣 Safigy on Twitch</a>
 </div>
+</div>
+
+<div class="buddy-section reveal">
+<img src="img/Jajko.jpeg" alt="JajkoPL" class="buddy-avatar">
+<div class="buddy-info">
+<h3>JajkoPL</h3>
+<p>My main War Thunder buddy. We grind together daily, and sometimes team up with Safigy for full squad action.</p>
+<a href="https://www.tiktok.com/@polishmig" target="_blank">🎵 JajkoPL on TikTok</a>
+</div>
+</div>
+
 </div>
 </section>
 
