Update placeholder text for Linexin project

--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@ I often play with my streaming partner <a href="https://www.twitch.tv/safigy" st
 <div class="image-card reveal">
 <div class="img-placeholder linexin">
 🐧
-<span class="placeholder-text">Linexin</span>
+<span class="placeholder-text">Maxis Linux</span>
 </div>
 <div class="card-body">
 <h3>Linexin</h3>
