Update project name from Linexin to Maxis Linux

--- a/about.html
+++ b/about.html
@@ -101,12 +101,12 @@ I often play with my streaming partner <a href="https://www.twitch.tv/safigy" st
 <div class="cards">
 
 <div class="image-card reveal">
-<div class="img-placeholder linexin">
+<div class="img-placeholder Maxis">
 🐧
 <span class="placeholder-text">Maxis Linux</span>
 </div>
 <div class="card-body">
-<h3>Linexin</h3>
+<h3>Maxis Linux</h3>
 <p>My own Linux distribution project. It's not perfect yet, but it was a massive learning experience — from bootloader to desktop.</p>
 <span class="tag">Linux Distro</span>
 <span class="tag purple">In Progress</span>
